# argus

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.cts  index.html  package.json  pnpm-lock.yaml  pom.xml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/app/: Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/permissions/: default.toml
src-tauri/app/permissions/schemas/: schema.json
src-tauri/app/src/: lib.rs  state.rs
src-tauri/app/src/broker/: state.rs
src-tauri/app/src/powsybl/: errors.rs  mod.rs  state.rs
src-tauri/app/src/powsybl/diagrams/: errors.rs  single_line.rs
src-tauri/app/src/powsybl/entities/: mod.rs  queries.rs
src-tauri/app/src/shared/entities/: mod.rs
src-tauri/binaries/: powsybl-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/crates/app/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/crates/app/capabilities/: default.json
src-tauri/crates/app/src/: lib.rs  state.rs
src-tauri/crates/app/src/broker/: state.rs
src-tauri/crates/app/src/powsybl/: commands.rs  state.rs
src-tauri/crates/app/src/powsybl/diagrams/: entities.rs  mod.rs  sld_subscriptions.rs
src-tauri/crates/app/src/powsybl/substations/: mod.rs
src-tauri/crates/app/src/settings/: entities.rs
src-tauri/crates/app/src/sidecars/: commands.rs  mod.rs
src-tauri/crates/argus/: Cargo.toml  tauri.conf.json
src-tauri/crates/argus/capabilities/: default.json
src-tauri/crates/argus/src/: lib.rs
src-tauri/crates/argus/src/settings/: errors.rs  mod.rs
src-tauri/crates/diagrams/: Cargo.toml  build.rs
src-tauri/crates/diagrams/permissions/: default.toml
src-tauri/crates/diagrams/permissions/autogenerated/: reference.md
src-tauri/crates/diagrams/permissions/schemas/: schema.json
src-tauri/crates/diagrams/src/: commands.rs  entities.rs  entry.rs  errors.rs  lib.rs  state.rs  utils.rs
src-tauri/crates/entities/: Cargo.toml
src-tauri/crates/powsybl/: Cargo.toml  build.rs
src-tauri/crates/powsybl/permissions/: channel-events.toml  default.toml
src-tauri/crates/powsybl/permissions/autogenerated/: reference.md
src-tauri/crates/powsybl/permissions/schemas/: schema.json
src-tauri/crates/powsybl/src/: commands.rs  lib.rs  state.rs  utils.rs
src-tauri/crates/powsybl/src/diagrams/: entities.rs  mod.rs  single_line.rs  sld_subscriptions.rs
src-tauri/crates/powsybl/src/entities/: dynawo.rs
src-tauri/crates/powsybl/src/substations/: mod.rs
src-tauri/crates/powsybl/src/voltage_levels/: mod.rs
src-tauri/crates/settings/: Cargo.toml  build.rs
src-tauri/crates/settings/permissions/: default.toml
src-tauri/crates/settings/permissions/autogenerated/: reference.md
src-tauri/crates/settings/permissions/schemas/: schema.json
src-tauri/crates/settings/src/: errors.rs  lib.rs  state.rs
src-tauri/crates/settings/src/url/: mod.rs
src-tauri/crates/settings/src/zmq/: mod.rs
src-tauri/crates/sidecars/: Cargo.toml  build.rs
src-tauri/crates/sidecars/permissions/: default.toml
src-tauri/crates/sidecars/permissions/autogenerated/: reference.md
src-tauri/crates/sidecars/permissions/schemas/: schema.json
src-tauri/crates/sidecars/src/: commands.rs  lib.rs
src-tauri/crates/visualizer/: Cargo.toml
src-tauri/game-engine/: Cargo.toml  build.rs
src-tauri/game-engine/permissions/autogenerated/: reference.md
src-tauri/game-engine/src/: commands.rs  desktop.rs  lib.rs  states.rs
src-tauri/migrations/: 20250518_create_iidm_table.sql  20250519_create_iidm_table.sql
src-tauri/src/: lib.rs  state.rs
src-tauri/src/broker/: commands.rs  errors.rs  mapping.rs  mod.rs  state.rs
src-tauri/src/database/: mod.rs
src-tauri/src/diagrams/: commands.rs  entry.rs  errors.rs  mod.rs  state.rs  utils.rs
src-tauri/src/entities/: dynawo.rs  iidm.rs  mod.rs  sld_metadata.rs
src-tauri/src/feeders/: commands.rs  entities.rs  error.rs  state.rs
src-tauri/src/nats/: commands.rs  entities.rs  error.rs  mod.rs  state.rs
src-tauri/src/network/: commands.rs  entities.rs  errors.rs  mod.rs  state.rs
src-tauri/src/network/diagrams/: mod.rs  single_line.rs  sld_metadata.rs  sld_subscription.rs
src-tauri/src/network/substations/: entities.rs  mod.rs
src-tauri/src/network/voltage_levels/: mod.rs
src-tauri/src/powsybl/: commands.rs  error.rs  errors.rs  mod.rs  state.rs
src-tauri/src/powsybl/commands/: sld.rs  substations.rs
src-tauri/src/powsybl/diagrams/: entities.rs  mod.rs  single_line.rs  sld_events.rs  sld_metadata.rs  sld_subscriptions.rs
src-tauri/src/powsybl/entities/: dynawo.rs  mod.rs
src-tauri/src/powsybl/substations/: mod.rs
src-tauri/src/powsybl/voltage_levels/: mod.rs
src-tauri/src/powsybl2/: entities.rs  manager.rs  state.rs
src-tauri/src/powsybl2/commands/: mod.rs  substations.rs
src-tauri/src/project/: commands.rs  config.rs  entities.rs  error.rs  manager.rs  mod.rs  repository.rs  state.rs
src-tauri/src/settings/: commands.rs  errors.rs  mod.rs  proxy.rs  state.rs
src-tauri/src/settings/banner/: state.rs
src-tauri/src/settings/broker/: error.rs  state.rs
src-tauri/src/settings/config/: mod.rs
src-tauri/src/settings/proxy/: mod.rs
src-tauri/src/settings/sidecars/: commands.rs  state.rs
src-tauri/src/settings/url/: mod.rs
src-tauri/src/settings/zmq/: mod.rs
src-tauri/src/shared/entities/: dynawo.rs  iidm.rs  mod.rs
src-tauri/src/shared/utils/: mod.rs
src-tauri/src/sidecars/: commands.rs  mod.rs
src-tauri/src/tasks/: commands.rs  entities.rs  error.rs  state.rs
src-tauri/tests/it/network/: mod.rs
utils/zmq-dynawo-mock/: Cargo.toml
utils/zmq-dynawo-mock/src/: main.rs
(+614 files in other folders)
