[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tauri = { version = "2", default-features = false }
tauri-build = "2"
tauri-plugin = "2"
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
schemars = "0.8"
uuid = "1"
