[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin = "2"

tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"

thiserror = "2.0"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

