[package]
name = "game-engine"
version = "0.0.0"
edition = "2021"
links = "plugin-game-engine"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = "0.15.0"
crossbeam = "0.8.4"
serde = "1.0.215"
tauri = "2.1.1"
thiserror = "2.0.6"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }

