[package]
name = "zmq-dynawo-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
zeromq = { version = "*", default-features = false, features = ["async-std-runtime", "all-transport"] }
