[package]
name = "diagrams"
version = "0.0.0"
edition = "2024"
links = "diagrams"

[dependencies]
tauri = { workspace = true, features = [] }
tokio = { workspace = true, features = ["full"] }
crossbeam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

zeromq = "0.4"
bimap = { version = "0.6.3" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"]}

