[package]
name = "powsybl"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = {workspace = true }
thiserror = { workspace = true }
log = {workspace = true}

futures = "0.3.31"
crossbeam = "0.8.4"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
uuid = "1"


[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
schemars = { workspace = true }
