[package]
name = "powsybl"
version = "0.0.0"
edition = "2024"
links = "powsybl"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

futures = "0.3.31"
crossbeam = "0.8.4"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
zeromq = "0.4.1"
base64 = "0.22.1"

entities = { path = "../entities" }
settings = { path = "../settings" }


[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
schemars = { workspace = true }
