[package]
name = "settings"
version = "0.0.0"
edition = "2024"
links = "settings"


[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = {workspace = true }
thiserror = { workspace = true }
log = {workspace = true}
zeromq = "0.4.1"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
schemars = { workspace = true }
