[package]
name = "sidecars"
version = "0.1.0"
edition = "2024"
links = "sidecars"

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = {workspace = true }
thiserror = { workspace = true }
log = {workspace = true}

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
schemars = { workspace = true }
